Text alignment fixup

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -20,7 +20,7 @@
 			margin-top: 0;
 		}
 		.blurb {
-			text-align: center;
+			text-align: justify;
 		}
 	}
 
